# RakshaCircle-Level-6

./: ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  README.md  SUBMISSION_GUIDE.md  package-lock.json  package.json  render.yaml
backend/: .env.example  app.js
backend/config/: env.js  startupChecks.js
backend/plugins/: auth.js
backend/routes/navigation/: index.js
backend/routes/raksha/: index.js
backend/services/: demoDataService.js  productionReadinessService.js  sorobanService.js
contracts/raksha-safety/: Cargo.toml  README.md
contracts/raksha-safety/src/: lib.rs
docs/: COMMUNITY_CONTRIBUTION.md  PRODUCTION_READINESS.md  TASKS_LEFT_STEP_BY_STEP.md
frontend/: .env.example  package.json
frontend/src/components/map/: LiveMap.tsx
frontend/src/hooks/: useLiveTracking.ts
frontend/src/pages/: SubmissionMvp.css  SubmissionMvp.tsx
frontend/src/services/: rakshaMvp.ts
